syntax = "proto3";

option csharp_namespace = "GrpcGreeterClient";

package greet;

// The greeting service definition.
service OrderProcessing {
	rpc GetOrder (OrderRequest) returns (OrderResponse);
	rpc SayHello (HelloRequest) returns (HelloReply);
}

message OrderRequest {
	int32 order_id = 1; 
}

message OrderResponse {
	Order order = 1;
}

message Order {
	int32 order_id = 1;
	int32 order_quantity = 2;
	double unit_price = 3;
	string ship_address = 4;
	string ship_city = 5;
	string ship_postal_code = 6;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
